--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <div class="camp-nou__content">
           <div class="camp-nou__before">
             <div class="camp-nou__img1-title">before</div>
-            <img class="camp-nou__img1" src="/images/Rectangle 2.png" alt="" />
+            <img class="camp-nou__img1" src="./images/Rectangle 2.png" alt="" />
           </div>
           <div class="camp-nou__after">
             <div class="camp-nou__img2-title">after</div>
-            <img class="camp-nou__img2" src="/images/Frame 3.png" alt="" />
+            <img class="camp-nou__img2" src="./images/Frame 3.png" alt="" />
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
           <div class="capacity__title">Capacity</div>
         </div>
         <div class="capacity__content">
-          <img class="capacity__img" src="/images/line.png" alt="" />
+          <img class="capacity__img" src="./images/line.png" alt="" />
           <div class="capacity__text">
             <p>
               The capacity of the Camp Nou is 99,354 spectators; it is the
