--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
         <div class="container">
           <div class="logo">
             <a class="logo__link" href="">
-              <img class="logo__img" src="/images/logo.png" alt="" />
+              <img class="logo__img" src="./images/logo.png" alt="" />
             </a>
             <div class="logo__img-title">FC BARCELONA</div>
           </div>
@@ -65,7 +65,7 @@
         <div class="barcelona__inner">
           <img
             class="barcelona__img"
-            src="/images/EwsVEkwXEAIC2oa.jpg"
+            src="./images/EwsVEkwXEAIC2oa.jpg"
             alt=""
           />
           <div class="barcelona__content">
