--- a/index3.html
+++ b/index3.html
@@ -23,7 +23,7 @@
         <div class="container">
           <div class="logo">
             <a class="logo__link" href="">
-              <img class="logo__img" src="/images/logo.png" alt="" />
+              <img class="logo__img" src="./images/logo.png" alt="" />
             </a>
             <div class="logo__img-title">FC BARCELONA</div>
           </div>
@@ -65,16 +65,51 @@
         <div class="trophies-top">
           <div class="trophies-top__title">NATIONAL</div>
           <div class="trophies-top__items">
-            <div class="trophies-top__item box1"><h4>Spanish championship-26</h4></div>
-            <div class="trophies-top__item box2"><h4>Spanish Cup-31</div>
-            <div class="trophies-top__item box3"><h4>Spanish Super Cup-13</h4></div>
+            <div class="trophies-top__item box1">
+              <h4>Spanish championship-26</h4>
+              <img
+                class="trophies-top__item-img"
+                src="./images/084de469011ea90e1c00fb2d7bd36.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="trophies-top__item box2">
+              <h4>Spanish Cup-31</h4>
+              <img
+                class="trophies-top__item-img"
+                src="./images/lcz16KNgOvQ.jpg"
+                alt=""
+              />
+            </div>
+            <div class="trophies-top__item box3">
+              <h4>Spanish Super Cup-13</h4>
+              <img
+                class="trophies-top__item-img"
+                src="./images/ocr.jfif"
+                alt=""
+              />
+            </div>
           </div>
         </div>
         <div class="trophies-bottom">
           <div class="trophies-bottom__title">INTERNATIONAL</div>
           <div class="trophies-bottom__items">
-            <div class="trophies-bottom__item box4"><h4>UEFA champions league</h4></div>
-            <div class="trophies-bottom__item box5"><h4>UEFA Super Cup-5</h4></div>
+            <div class="trophies-bottom__item box4">
+              <h4>UEFA champions league</h4>
+              <img
+                class="trophies-bottom__item-img"
+                src="./images/25.jpg"
+                alt=""
+              />
+            </div>
+            <div class="trophies-bottom__item box5">
+              <h4>UEFA Super Cup-5</h4>
+              <img
+                class="trophies-bottom__item-img"
+                src="./images/4xuJi98Xsmo.jpg"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </div>
